--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="header">
-        KURUSEL
+        KARUSEL
     </div>
     <div class="wripper">
         <main class="kurusel">
